test-ui/ui/msg_send_no_return_type.stderr
error[E0282]: type annotations needed
 --> ui/msg_send_no_return_type.rs
  |
  |         msg_send![cls, new];
  |         ^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `msg_send` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider giving `result` an explicit type
 --> $WORKSPACE/objc2/src/macros.rs
  |
  |         let result: _;
  |                   +++
